--- a/css/popular.css
+++ b/css/popular.css
@@ -26,6 +26,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     list-style: none;
+    margin-top: 7rem;
 }
 .popular__item {
     width: calc(33.33% - 13.33px);
