--- a/css/qoute.css
+++ b/css/qoute.css
@@ -1,49 +1,96 @@
 .quote {
-    padding-top: 14rem;
-    padding-bottom: 14rem;
-    background-color: var(--bg-block);
-  }
-  .quote__item {
-    text-align: center;
-    margin-bottom: 6rem;
-  }
-  .quote__item img {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .quote__item .desc {
-    max-width: 80%;
-    margin: 5rem auto;
-    font-size: 1.4rem;
-    color: var(--gray-light);
-    line-height: 1.8;
-  }
-  .quote__item .author {
-    width: 6rem;
-    height: 6rem;
-    border-radius: 50%;
-    margin-bottom: 2rem;
-  }
-  .quote__item .author-name {
-    font-family: var(--secondary-font);
-    font-size: 1.6rem;
-  }
-  .quote__item .author-name span {
-    font-family: var(--primary-font);
-    font-size: 1.2rem;
-  }
-  .quote__nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .quote__nav li {
-    width: 1rem;
-    height: 1rem;
-    border-radius: 1rem;
-    background-color: #ffc3c2;
-    margin: 0 0.5rem;
-  }
-  .quote__nav li.active {
-    background-color: #ff817e;
-  }
+  padding-top: 14rem;
+  padding-bottom: 14rem;
+  background-color: var(--bg-block);
+}
+.quote__item {
+  text-align: center;
+  margin-bottom: 6rem;
+}
+.quote__item img {
+  margin-left: auto;
+  margin-right: auto;
+}
+.quote__item .desc {
+  max-width: 80%;
+  margin: 5rem auto;
+  font-size: 1.4rem;
+  color: var(--gray-light);
+  line-height: 1.8;
+}
+.quote__item .author {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  margin-bottom: 2rem;
+}
+.quote__item .author-name {
+  font-family: var(--secondary-font);
+  font-size: 1.6rem;
+}
+.quote__item .author-name span {
+  font-family: var(--primary-font);
+  font-size: 1.2rem;
+}
+.quote__nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.quote__nav li {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 1rem;
+  background-color: #ffc3c2;
+  margin: 0 0.5rem;
+}
+.quote__nav li.active {
+  background-color: #ff817e;
+}
+
+  /* Slides */
+.mySlides {
+display: none;
+
+}
+/* The dot/bullet/indicator container */
+.dot-container {
+text-align: center;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+cursor: pointer;
+height: 1rem;
+width: 1rem;
+margin: 0 0.5rem;
+background-color: #ffc3c2;
+border-radius: 50%;
+display: inline-block;
+transition: background-color 0.6s ease;
+}
+
+/* Add a background color to the active dot/circle */
+.active, .dot:hover {
+background-color:#ff817e;
+}
+
+/* Add a blue color to the author */
+.author {color: cornflowerblue;}
+
+.fade {
+-webkit-animation-name: fade;
+-webkit-animation-duration: 1.5s;
+animation-name: fade;
+animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+from {opacity: .4}
+to {opacity: 1}
+}
+
+@keyframes fade {
+from {opacity: .4}
+to {opacity: 1}
+}
