--- a/css/header.css
+++ b/css/header.css
@@ -130,7 +130,7 @@
 @media screen and (max-width: 767px) {
     .header__image,
     .menu {
-      display: none;
+      
     }
     .header{
         min-height: 50rem;
@@ -146,11 +146,51 @@
     color: var(--primary-color);
     cursor: pointer;
 }
-
+.wrapper{overflow-x: hidden;}
+.menu__close{display:none;}
 @media screen and (max-width: 767px) {
     .menu__collapse {
         display: block;
+        z-index: 50;
     }   
+    .header .menu {
+        margin-left: 0;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 100;
+        background-color: white;
+        border-left: 1px solid #f2f2f2;
+        min-width: 20rem;
+        transition: transform 0.25s linear;
+        will-change: transform;
+        transform: translateX(100%);
+      }
+      .header .menu.is-open {
+        transform: translateX(0);
+      }
+      .header .menu__list {
+        flex-direction: column;
+      }
+      .header .menu__item {
+        margin: 0;
+        width: 100%;
+      }
+      .header .menu__link {
+        display: block;
+        padding: 1.5rem;
+        border-bottom: 1px solid #f2f2f2;
+      }
+      .header .menu__close {
+        position: absolute;
+        right: 1rem;
+        top: 1rem;
+        z-index: 10;
+        cursor: pointer;
+        font-size: 1.4rem;
+        display: block;
+      }
 }
 
 @media screen and (max-width: 1439px), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
