--- a/css/footer.css
+++ b/css/footer.css
@@ -31,3 +31,12 @@
   .footer .menu {
     margin-left: 0;
   }
+.footer__logo{
+  display: block;
+  margin-bottom: 5rem;
+}
+  @media screen and (max-width: 767px) {
+    .footer .menu{
+      display: none;
+    }
+  }
